<resources>
    <string name="app_name">Help 2 Helpless</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="back_to_home">Back to\nHome</string>
    <string name="username_title">Disease Name</string>
    <string name="username">Influenza</string>
    <string name="phone_title">Phone</string>
    <string name="phone">+000 00 000 000</string>
    <string name="address_title">Address</string>
    <string name="address">City, Street</string>
    <string name="email_title">Monthly Income</string>
    <string name="email">10000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>