<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ClientProfileActivity">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    <LinearLayout
        android:background="#8ecae6"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="4">
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="90dp"
         android:id="@+id/cprofile_image"
         android:src="@drawable/persons"
         android:layout_marginTop="50dp"
         android:layout_height="90dp"/>

        <TextView
            android:id="@+id/cname"

            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/relway_semibold"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:textFontWeight="600"
            android:text="Hasanur Zaman" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_medical_services_24"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username_title"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/nm_deasese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    style="@style/TextDescription"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_phone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_title"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/ccontact"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/artifika"
                    android:text="@string/phone" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="35dp"
               android:layout_height="35dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/money_sign"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/cincome"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_month_cost"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Monthly Cost"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/mcost"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5000" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_location"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_title"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/caddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    style="@style/TextDescription"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>